--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "spotify",
+  "name": "backendindex2",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^3.21.2",
+    "nodemon": "^3.1.9"
+  }
 }
